--- a/myClass/pages/courses/courses.wxss
+++ b/myClass/pages/courses/courses.wxss
@@ -1,4 +1,32 @@
 /* pages/courses/courses.wxss */
+.toptab.active{
+  color: #ffffff;
+  border-bottom: solid 2px #ffffff;
+}
+
+.top-tab{
+  width: 750rpx;
+  height: 100rpx;
+  background: #298DE5;
+  color: #8CCEFD;
+  font-size: 28rpx;
+  line-height: 100rpx;
+  box-shadow: 0 2px 2px #bebebe;
+  margin: 0 0 8rpx 0;
+  z-index: 9999;
+}
+.flex-wrp{
+  display: flex;
+}
+.flex-tab{
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: stretch;
+}
+.flex-item{
+  flex-grow: 1;
+  text-align: center;
+}
 
 /* conference */
 .filter-sort{
@@ -98,6 +126,7 @@
 	white-space: nowrap;
 }
 /* activity */
+
 .activity-item-info{
   justify-content: space-between;
 }
