--- a/myClass/app.wxss
+++ b/myClass/app.wxss
@@ -1,5 +1,5 @@
 /**app.wxss**/
-.container {
+/* .container {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -7,7 +7,7 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+}  */
 
 /**app.wxss**/
 page{
@@ -15,7 +15,7 @@ page{
 	color: #333;
   	display: flex;
   	flex-direction: column;
- 	font-family:;
+ 	/* font-family: */
  	font: normal 30rpx/1.68 -apple-system-font, 'Helvetica Neue', Helvetica, 'Microsoft YaHei', sans-serif;
 }
 .container {
