--- a/myClass/pages/bindUser/bindUser.wxss
+++ b/myClass/pages/bindUser/bindUser.wxss
@@ -1,1 +1,34 @@
 /* pages/bindUser/bindUser.wxss */
+.log-reg-btn-view{
+  display:flex;
+  justify-content:space-around;
+  padding: 20rpx; /*增加距离*/
+}
+
+.log-reg-btn-view .log-reg-btn{
+  border-color: cornsilk;
+  background-color: rgba(100, 149, 237, .7);
+  color: aliceblue;
+  border-style: hidden;
+  border-radius: 5px;
+  width: 100px;
+  font-size: 16px;
+  /* line-height: 88rpx;   行高 */
+}
+
+.wxinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wxinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.wxinfo-nickname {
+  color: #aaa;
+}
