--- a/myClass/pages/courses/courses.wxml
+++ b/myClass/pages/courses/courses.wxml
@@ -1,29 +1,63 @@
-<!--pages/courses/courses.wxml-->
-<view class="container">
-	<view class="filter-flex">
-		<view class="filter-tab sort-tab">
-			<text bindtap="setSortBy" data-sortindex="{{index}}" data-sortid="{{item.id}}" class="{{sortindex==index?'active':''}}" wx:for="{{sort}}" wx:key="{{item.id}}">{{item.title}}</text>
+<view class="top-tab flex-wrp flex-tab ">
+	<view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx"
+		wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
+		{{itemName}}
+	</view>
+</view>
+
+<scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle"
+				lower-threshold="50" bindscrolltolower="scrollLoading">
+	<view class="ctnt0" hidden="{{currentNavtab==0 ? '' : true}}">
+		<view class="container">
+				<view class="conference-list">
+					<navigator class="conference-item" wx:for="{{show_list_join}}" wx:key="id"
+						url="../coursedetail/coursedetail?id={{item.id}}">
+						<view class="conference-item-img">
+							<image src="{{item.imgurl}}" mode="aspectFill"></image>
+							<text class="hover{{index}}" data-status="{{item.status}}">{{item.status}}</text>
+						</view>
+						<view class="conference-item-text">
+							<view class="conference-item-title">{{item.name}}</view>
+							<view class="conference-item-info activity-item-info">
+								<text class="icon-time">{{item.time}}</text>
+								<text class="icon-xinxi">{{item.coments}}</text>
+							</view>
+							<view class="conference-item-info">
+								<text class="icon-zuobiao">{{item.address}}</text>
+							</view>
+						</view>
+					</navigator>
+				</view>
+				<view class="gototop {{scrolltop>200?'active':''}}" bindtap="goToTop"></view>
+
 		</view>
 	</view>
-	<scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle" lower-threshold="50" bindscrolltolower="scrollLoading">
-		<view class="conference-list">
-			<navigator class="conference-item" wx:for="{{activitylist}}" wx:key="{{item.id}}" url="../coursedetail/coursedetail?id={{item.id}}">
-				<view class="conference-item-img">
-					<image src="{{item.imgurl}}" mode="aspectFill"></image>
-					<text class="hover{{index}}" data-status="{{item.status}}">{{item.status}}</text>
+
+	<view class="ctnt0" hidden="{{currentNavtab==1 ? '' : true}}">
+		<view class="container">
+
+				test
+				<view class="conference-list">
+					<navigator class="conference-item" wx:for="{{show_list_create}}" wx:key="id"
+						url="../coursedetail/coursedetail?id={{item.id}}">
+						<view class="conference-item-img">
+							<image src="{{item.imgurl}}" mode="aspectFill"></image>
+							<text class="hover{{index}}" data-status="{{item.status}}">{{item.status}}</text>
+						</view>
+						<view class="conference-item-text">
+							<view class="conference-item-title">{{item.name}}</view>
+							<view class="conference-item-info activity-item-info">
+								<text class="icon-time">{{item.time}}</text>
+								<text class="icon-xinxi">{{item.coments}}</text>
+							</view>
+							<view class="conference-item-info">
+								<text class="icon-zuobiao">{{item.address}}</text>
+							</view>
+						</view>
+					</navigator>
 				</view>
-				<view class="conference-item-text">
-					<view class="conference-item-title">{{item.name}}</view>
-					<view class="conference-item-info activity-item-info">
-						<text class="icon-time">{{item.time}}</text>
-						<text class="icon-xinxi">{{item.coments}}</text>
-					</view>
-					<view class="conference-item-info">
-						<text class="icon-zuobiao">{{item.address}}</text>
-					</view>
-				</view>
-			</navigator>
+				<view class="gototop {{scrolltop>200?'active':''}}" bindtap="goToTop"></view>
+
 		</view>
-		<view class="gototop {{scrolltop>200?'active':''}}" bindtap="goToTop"></view>
-	</scroll-view>
-</view>
+	</view>
+</scroll-view>
