--- a/myClass/pages/test/test.wxml
+++ b/myClass/pages/test/test.wxml
@@ -1,2 +1,27 @@
-<!--pages/test/test.wxml-->
-<text>pages/test/test.wxml</text>
+<view>
+    asdfasdfasdf
+    <block wx:if="{{isShowConfirm}}">
+        <view class='toast-box'>
+            <view class='toastbg'></view>
+            <view class='showToast'>
+                <view class='toast-title'>
+                    <text>确认支付</text>
+                </view>
+                <view class='toast-main'>
+                    <view class='toast-input'>
+                        <input type='password' placeholder='输入支付密码' bindinput='setValue'
+                            data-name='stuEidtName'></input>
+                    </view>
+                </view>
+                <view class='toast-button'>
+                    <view class='button1'>
+                        <button catchtap='cancel' style = "width:100%" >取消</button>
+                    </view>
+                    <view class='button2'>
+                        <button  style = "width:100%" data-url="../allOrder/allOrder" catchtap='confirmAcceptance'>确定</button>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </block>
+</view>
